# src/controller/racketController.ts
@@ -1,11 +1,12 @@
-import RacketLevels from "../enums/racketLevels";
 import { NotFoundError } from "../errors/appError";
 import PlayerRepository from "../repositories/playerRepository";
 import RacketRepository from "../repositories/racketRepository";
-import { Route, Get, Post, Body, Tags, Delete, Path} from "tsoa";
+import { Route, Get, Post, Body, Tags, Delete, Path, Patch} from "tsoa";
 import RacketResponse from "../responses/racketResponse";
 import AssignRacketRequest from "../requests/assignRacketRequest";
 import CreateRacketRequest from "../requests/createRacketRequest";
+import { Racket } from "../entities/racket";
+import UpdateRacketRequest from "../requests/updateRacketRequest";
 
 
 @Tags('Rackets')
@@ -21,6 +22,21 @@ export default class RacketController {
         this.userId = userId;
     }
 
+    private async convertPlayerModelToResponse(racket: Racket): Promise<RacketResponse>{
+        return {
+            entityId: racket.entityId,
+            brand: racket.brand,
+            model: racket.model,
+            year: racket.year,
+            weight: racket.weight,
+            level: racket.level,
+            headSizeInch: racket.headSizeInch,
+            balance: racket.balance,
+            stringPattern: racket.stringPattern,
+            recommendedStrings: racket.recommendedStrings,
+        } as RacketResponse;
+    }
+
     @Get("/")
     async getRackets(): Promise<RacketResponse[]> {
         let player = await this.playerRepository.findByEntityID(this.userId);
@@ -30,46 +46,28 @@ export default class RacketController {
         }
 
         let rackets = await this.repository.getUserRackets(player.rackets);
-       
-        const data = rackets.map(racket => {
-            return {
-                entityId: racket.entityId,
-                brand: racket.brand,
-                model: racket.model,
-                year: racket.year,
-                weight: racket.weight,
-                level: racket.level,
-                headSizeInch: racket.headSizeInch,
-                balance: racket.balance,
-                stringPattern: racket.stringPattern,
-                recommendedStrings: racket.recommendedStrings,
-            } as RacketResponse;
+
+        const data = rackets.map(async racket => {
+            return await this.convertPlayerModelToResponse(racket);
         });
 
-        return data;
+        return await Promise.all(data);
     }
 
 
     @Get("/all")
     async getAllRackets(): Promise<RacketResponse[]>  {
         let rackets = await this.repository.findAll();
-        const data = rackets.map(racket => {
-            return {
-                entityId: racket.entityId,
-                uuid: racket.uuid,
-                brand: racket.brand,
-                model: racket.model,
-                year: racket.year,
-                weight: racket.weight,
-                level: racket.level,
-                headSizeInch: racket.headSizeInch,
-                balance: racket.balance,
-                stringPattern: racket.stringPattern,
-                recommendedStrings: racket.recommendedStrings,
-            } as RacketResponse;
+
+        if (!rackets) {
+            throw new NotFoundError("No rackets at all!");
+        }
+
+        const data = rackets.map(async racket => {
+            return await this.convertPlayerModelToResponse(racket);
         });
-            
-        return data;
+
+        return await Promise.all(data);
     }
 
     @Post("/")
@@ -91,4 +89,15 @@ export default class RacketController {
     async deleteRacket(@Path() entityId: string): Promise<string> {
         return await this.repository.deleteEntity(entityId);
     }
+
+    @Get("/{entityId}")
+    async getRacket(@Path() entityId: string): Promise<RacketResponse> {
+        return await this.convertPlayerModelToResponse(await this.repository.findByEntityID(entityId));
+    }
+
+    @Patch("/{entityId}")
+    async updateRacket(@Body() updateRequest: UpdateRacketRequest, @Path()  entityId: string): Promise<string> {
+        return await this.repository.updateRacket(entityId, updateRequest);
+    }
+
 }
